--- a/microservices/customer-service/build.gradle
+++ b/microservices/customer-service/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	testCompile 'org.junit.jupiter:junit-jupiter:5.5.2'
 	testImplementation 'io.projectreactor:reactor-test'
 }
 
