--- a/settings.gradle
+++ b/settings.gradle
@@ -4,5 +4,5 @@ include 'microservices:customer-service'
 include 'microservices:item-service'
 include 'microservices:supplier-service'
 include 'microservices:composite-service'
-
+include 'test-service'
 
