--- a/microservices/customer-service/build.gradle
+++ b/microservices/customer-service/build.gradle
@@ -3,7 +3,9 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
 }
-
+ext{
+	mapstructVersion = "1.3.1.Final"
+}
 group = 'com.nguyen.microservices.core.customer'
 version = '1.0.0-SNAPSHOT'
 sourceCompatibility = '1.8'
@@ -16,14 +18,26 @@ dependencies {
 	implementation project(':api')
 	implementation project(':utils')
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation("org.mapstruct:mapstruct:${mapstructVersion}")
+
+	compileOnly "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+	testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	testCompile 'org.junit.jupiter:junit-jupiter:5.5.2'
 	testImplementation 'io.projectreactor:reactor-test'
+	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
 }
 
 test {
 	useJUnitPlatform()
+	testLogging {
+		events "passed", "skipped", "failed"
+	}
 }
