--- a/microservices/item-service/build.gradle
+++ b/microservices/item-service/build.gradle
@@ -3,7 +3,9 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
 }
-
+ext {
+	mapstructVersion = "1.3.1.Final"
+}
 group = 'com.nguyen.microservices.core.item'
 version = '1.0.0-SNAPSHOT'
 sourceCompatibility = '1.8'
@@ -16,13 +18,27 @@ dependencies {
 	implementation project(':utils')
 	implementation project(':api')
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+
+	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+	implementation('mysql:mysql-connector-java')
+	implementation("org.mapstruct:mapstruct:${mapstructVersion}")
+
+	compileOnly "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+	testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	testImplementation 'io.projectreactor:reactor-test'
+	testImplementation('com.h2database:h2')
 }
 
 test {
 	useJUnitPlatform()
+	testLogging {
+		events "passed", "skipped", "failed"
+	}
 }
