--- a/microservices/item-service/src/main/resources/application.yml
+++ b/microservices/item-service/src/main/resources/application.yml
@@ -1,5 +1,13 @@
 server.port: 6007
 server.error.include-message: always
+
+spring.jpa.hibernate.ddl-auto: update
+
+spring.datasource:
+  url: jdbc:mysql://localhost/review-db
+  username: user
+  password: pwd
+
 logging:
   level:
     root: INFO
