--- a/microservices/item-service/src/main/resources/application.yml
+++ b/microservices/item-service/src/main/resources/application.yml
@@ -4,11 +4,23 @@ server.error.include-message: always
 spring.jpa.hibernate.ddl-auto: update
 
 spring.datasource:
-  url: jdbc:mysql://localhost/review-db
+  url: jdbc:mysql://localhost/item-db
   username: user
   password: pwd
+
+spring.datasource.hikari.initializationFailTimeout: 600000
 
 logging:
   level:
     root: INFO
     com.nguyen: DEBUG
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+
+---
+spring.profiles: docker
+
+spring.datasource:
+  url: jdbc:mysql://mysql/item-db
+
+server.port: 8080
