--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
       - "3306:3306"
     environment:
       - MYSQL_ROOT_PASSWORD=rootpwd
-      - MYSQL_DATABASE=item-db
+      - MYSQL_DATABASE=item-db,supplier-db
       - MYSQL_USER=user
       - MYSQL_PASSWORD=pwd
     healthcheck:
