--- a/microservices/supplier-service/src/main/resources/application.yml
+++ b/microservices/supplier-service/src/main/resources/application.yml
@@ -1,6 +1,25 @@
 server.port: 6006
 server.error.include-message: always
+spring.jpa.hibernate.ddl-auto: update
+
+spring.datasource:
+  url: jdbc:mysql://localhost/supplier-db
+  username: user
+  password: pwd
+
+spring.datasource.hikari.initializationFailTimeout: 600000
+
 logging:
   level:
     root: INFO
     com.nguyen: DEBUG
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+
+---
+spring.profiles: docker
+
+spring.datasource:
+  url: jdbc:mysql://mysql/supplier-db
+
+server.port: 8080
